--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,14 @@
       "src/Traver/functions.php"
     ]
   },
+  "autoload-dev": {
+    "psr-4": {
+      "Traver\\Test\\UnitTest\\": "tests/UnitTest/"
+    }
+  },
   "require": {
     "php": ">=5.6.0",
-    "precore/precore": "^2.0"
+    "phpoption/phpoption": "^1.5"
   },
   "require-dev": {
     "phpunit/phpunit": "~5"
