Fixed travis-ci config

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 language: php
+sudo: false
 php:
   - '5.6'
+  - '7.0'
+  - nightly
+  - hhvm
 
-phpunit
+before_script: composer install
+script: phpunit --debug
